src/objects/Org_Wide_Fixed_Setting__mdt.object
<CustomObject>
    <description>All fixed settings for all salesforce orgs</description>
    <fields>
        <fullName>Portal_No_Enrollment_Grace_Period__c</fullName>
        <description>Grace period for a Portal User to be deactivated when all enrollments are inactive</description>
        <label>Portal No Enrollment Grace Period</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_No_Password_Grace_Period__c</fullName>
        <label>Portal No Password Grace Period</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_User_Inactivity_Deactivation__c</fullName>
        <description>No of days before a Portal User to be deactivated</description>
        <label>Portal User Inactivity Deactivation</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_User_Inactivity_Notif_Count__c</fullName>
        <description>No of days before a portal user is notified of inactivity</description>
        <label>Portal User Inactivity Notif Count</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reset_Pass_Link_Validity__c</fullName>
        <description>Sets reset password link validity</description>
        <label>Reset Pass Link Validity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Org Wide Fixed Setting</label>
    <pluralLabel>Org Wide Fixed Settings</pluralLabel>
</CustomObject>